--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       text-align: center;
     }
 
-    .timeline-group {
-      margin-bottom: 30px;
+    .section-title {
+      font-weight: bold;
+      margin-top: 20px;
+      margin-bottom: 10px;
     }
 
     .timeline {
@@ -25,7 +27,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      width: 40px;
+      width: 50px;
       font-size: 10px;
     }
 
@@ -33,72 +35,83 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      transform-origin: bottom center;
+      transform-origin: center center;
       transition: transform 0.3s ease;
     }
 
     .shaft {
+      width: 4px;
       background-color: gray;
-      width: 6px;
-      height: 30px;
+      transition: height 0.3s ease;
     }
 
     .head {
       width: 0;
       height: 0;
-      border-left: 10px solid transparent;
-      border-right: 10px solid transparent;
-      border-bottom: 15px solid gray;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-bottom: 12px solid gray;
     }
 
-    .highlight .shaft,
     .highlight .head {
-      background-color: red;
-      border-bottom-color: red;
-      filter: drop-shadow(0 0 5px orange);
+      border-bottom-color: red !important;
+      filter: drop-shadow(0 0 4px orange);
+    }
+
+    .timestamp {
+      margin-top: 4px;
     }
 
     .icon {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
+      width: 30px;
+      height: 30px;
+      margin-top: 4px;
     }
   </style>
 </head>
 <body>
-  <h2 id="date-title">風向タイムライン</h2>
-
-  <div class="timeline-group">
-    <h3>午前</h3>
-    <div class="timeline" id="amTimeline"></div>
+  <h2>風向タイムライン（当日）</h2>
+  <div id="amSection">
+    <div class="section-title">午前</div>
+    <div class="timeline" id="am1"></div>
+    <div class="timeline" id="am2"></div>
   </div>
-  <div class="timeline-group">
-    <h3>午後</h3>
-    <div class="timeline" id="pmTimeline"></div>
+  <div id="pmSection">
+    <div class="section-title">午後</div>
+    <div class="timeline" id="pm1"></div>
+    <div class="timeline" id="pm2"></div>
   </div>
 
   <script>
-    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec'; // ← Apps Script 公開URL
-
-    function padZero(n) {
-      return n < 10 ? '0' + n : n;
-    }
+    const apiUrl = 'https://script.google.com/macros/s/【あなたの公開URL】/exec';
 
     function highlightDir(deg) {
-      return (deg >= 22.5 && deg < 67.5); // 北北東〜東北東
+      return (deg >= 22.5 && deg <= 67.5); // NNE〜ENE
+    }
+
+    function padZero(n) {
+      return n.toString().padStart(2, '0');
     }
 
     fetch(apiUrl)
       .then(res => res.json())
       .then(data => {
+        const am1 = document.getElementById('am1');
+        const am2 = document.getElementById('am2');
+        const pm1 = document.getElementById('pm1');
+        const pm2 = document.getElementById('pm2');
+
         const today = new Date();
-        const todayStr = `${today.getFullYear()}年${padZero(today.getMonth() + 1)}月${padZero(today.getDate())}日`;
-        document.getElementById('date-title').textContent = `風向タイムライン（${todayStr}）`;
+        const yyyy = today.getFullYear();
+        const mm = padZero(today.getMonth() + 1);
+        const dd = padZero(today.getDate());
+        const todayStr = `${yyyy}/${mm}/${dd}`;
 
-        const amTimeline = document.getElementById('amTimeline');
-        const pmTimeline = document.getElementById('pmTimeline');
+        const filtered = data.filter(entry => entry.timestamp.startsWith(todayStr));
 
-        data.forEach(entry => {
+        let amCount = 0, pmCount = 0;
+
+        filtered.forEach(entry => {
           const t = new Date(entry.timestamp);
           const hour = t.getHours();
           const minute = t.getMinutes();
@@ -112,20 +125,17 @@
           const arrow = document.createElement('div');
           arrow.className = 'arrow';
           arrow.style.transform = `rotate(${(deg + 180) % 360}deg)`;
+          if (highlightDir(deg)) arrow.classList.add('highlight');
 
           const shaft = document.createElement('div');
           shaft.className = 'shaft';
-          shaft.style.height = `${Math.min(Math.max(speed * 3, 15), 60)}px`;
+          shaft.style.height = `${Math.min(Math.max(speed * 4, 10), 30)}px`;
 
           const head = document.createElement('div');
           head.className = 'head';
 
           arrow.appendChild(shaft);
           arrow.appendChild(head);
-
-          if (highlightDir(deg)) {
-            arrow.classList.add('highlight');
-          }
 
           const timeText = document.createElement('div');
           timeText.className = 'timestamp';
@@ -143,11 +153,16 @@
           entryDiv.appendChild(icon);
 
           if (hour < 12) {
-            amTimeline.appendChild(entryDiv);
+            (amCount < 12 ? am1 : am2).appendChild(entryDiv);
+            amCount++;
           } else {
-            pmTimeline.appendChild(entryDiv);
+            (pmCount < 12 ? pm1 : pm2).appendChild(entryDiv);
+            pmCount++;
           }
         });
+      })
+      .catch(err => {
+        document.body.innerHTML += '<p style="color:red;">データ取得エラー: ' + err + '</p>';
       });
   </script>
 </body>
