--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 
   <script>
-    const apiUrl = 'https://script.google.com/macros/s/【あなたの公開URL】/exec';
+    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec';
 
     function highlightDir(deg) {
       return (deg >= 22.5 && deg <= 67.5); // NNE〜ENE
