--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div id="pm" class="timeline"></div>
 
   <script>
-    const apiUrl = 'https://script.google.com/macros/s/＜YOUR_SCRIPT_ID＞/exec';
+    const apiUrl = 'https://script.google.com/macros/s/AKfycbzZgiy79BuQtUgE1QVgdjaEpSD7knxwiLJsOdLADEmXk9eX2baUy9jwfsNomLXUKs6QbA/exec';
     const params = new URLSearchParams(window.location.search);
     const today = new Date();
     const offset = parseInt(params.get('offset') || '0', 10);
